# better-uuid

./: .editorconfig  .gitignore  ADOPTION.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  PRD.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  SUPPORT.md  clippy.toml  package.json  phase-2-plan.md  pnpm-lock.yaml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
.qwen/: settings.json  settings.json.orig
crates/better_uuid_core/: Cargo.toml
crates/better_uuid_core/src/: encode.rs  error.rs  layout.rs  lib.rs  parse.rs  strategy.rs
crates/better_uuid_core/src/strategies/: mod.rs  random_v4.rs  time_ordered.rs
crates/better_uuid_wasm/: Cargo.toml  LICENSE
crates/better_uuid_wasm/src/: lib.rs
docs/: .eleventy.js  collision-model.md  formats.md  package-lock.json  package.json
docs/src/: index.md  styles.css
docs/src/_includes/: layout.njk
docs/src/api/: compat-nanoid.md  compat-uuid.md  configure.md  createId.md  isLegacyId.md  parseId.md  withIdContext.md
docs/src/guides/: collision-model.md  failure-modes.md  getting-started.md  migration.md  security.md  wire-format.md
fixtures/: legacy.jsonl  vectors.jsonl
scripts/: ci-bench.mjs  release.mjs  release.ps1  release.sh
