[workspace]
members = [
    "crates/better_uuid_core",
    "crates/better_uuid_wasm",
]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/better-uuid/better-uuid"
readme = "README.md"

[workspace.dependencies]
better_uuid_core = { path = "crates/better_uuid_core" }
better_uuid_wasm = { path = "crates/better_uuid_wasm" }
getrandom = { version = "0.3", features = ["wasm_js"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
wasm-bindgen = "0.2"
uuid = { version = "1", features = ["v4", "v7", "js"] }
rand = "0.10"
blake3 = "1"
base32 = "0.5"
