[package]
name = "better_uuid_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core ID generation, encoding, and parsing logic for better-uuid"

[dependencies]
getrandom = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
blake3 = { workspace = true }
base32 = { workspace = true }

[[bin]]
name = "generate_fixtures"
path = "src/bin/generate_fixtures.rs"

[dev-dependencies]
proptest = "1"

[features]
default = []
